# maldi_amr

./: .gitignore  LICENSE  README.md  pyproject.toml
MaldiML/: README.md  setup.py
MaldiML/MaldiML/: ._plotting.py  ._utils.py  __init__.py  datasets.py  (+6 more)
amr_maldi_ml/: E-CEF_plotly.csv  analyse_metadata_results.py  analyse_prevalances.py  analyse_sample_size_versus_auc.py  app.py  baseline.py  build_table1_categories.py  build_table1_suppl.py  build_table2_assymetric_rejection.py  build_table2_rejection.py  build_table3_replication.py  build_table4_replication.py  calc_feat_weights.sh  calculate_class_ratio_for_pairs.py  calculate_dataset_statistics.py  calculate_feature_importance_values.py  calculate_mean.py  calibrate_classifier.py  collect_results.py  collect_workstation_results.py  count_fid_and_AMR_labels.py  create_plots.sh  create_table.sh  create_table1_categories.py  create_table1_suppl.py  curves_per_species_and_antibiotic.py  curves_per_species_and_antibiotic_stratified.py  curves_per_species_and_antibiotic_stratified_warped.py  domain_adaptation_shallow.py  domain_adaptation_shallow_iw.py  ensemble.py  explain_classifier.py  find_broken_json.py  importance_weighting.py  json_to_excel.py  load_driams_for_debugging.py  make_resampled_output.sh  mean_intensities.py  mean_spectra.py  mmd.py  (+28 more)
results/: Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Amoxicillin-Clavulanic acid_Seed_172.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Amoxicillin-Clavulanic acid_Seed_270.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Amoxicillin-Clavulanic acid_Seed_344.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Amoxicillin-Clavulanic acid_Seed_35.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Amoxicillin-Clavulanic acid_Seed_409.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Amoxicillin-Clavulanic acid_Seed_89.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Ceftriaxone_Seed_344.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Ceftriaxone_Seed_35.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Ceftriaxone_Seed_545.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Ciprofloxacin_Seed_164.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Ciprofloxacin_Seed_172.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Ciprofloxacin_Seed_188.json  Site_DRIAMS-A_Species_Escherichia coli_Antibiotic_Ciprofloxacin_Seed_270.json  (+14 more)
(+70529 files in other folders)
