[tool.poetry]
name = "amr_maldi_ml"
version = "0.1.0"
description = ""
authors = ["Caroline Weis <caroline.weis@bsse.ethz.ch>", "Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
maldi-learn = {git = "ssh://git@github.com/BorgwardtLab/maldi-learn.git"}
matplotlib = "^3.2.0"
seaborn = "^0.10.0"
jupyter = "^1.0.0"
numpy = "^1.18.1"
pandas = "^1.0.1"
tabulate = "^0.8.6"
python-dotenv = "^0.12.0"
xlrd = "^1.2.0"
lightgbm = "^2.3.1"
heatmapz = {git = "ssh://git@github.com/cvweis/heatmap.git"}
#imbalanced-learn = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
